Spelling errors front, task #4090

--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -64,7 +64,7 @@
             imported.
           </p>
           <p>
-            At any time later it is possible to switch between scenes or to create new ones by pressing the <mat-icon
+            It is possible to switch between scenes or to create new ones by pressing the <mat-icon
               style="vertical-align: middle">collections
             </mat-icon> or <mat-icon style="vertical-align: middle"> add_photo_alternate</mat-icon> button.
           </p>
@@ -77,7 +77,7 @@
       <mat-card class="intro-card koia-color-right">
         <mat-card-header>
           <div mat-card-avatar id="line-chart-image"></div>
-          <mat-card-title>Step 3: Visualyze and analyze</mat-card-title>
+          <mat-card-title>Step 3: Visualize and analyze</mat-card-title>
           <mat-card-subtitle class="koia-color-right">Shape, visualyze and analyze your data</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image class="intro-card-image" src="/assets/graph_close.png">
