--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -126,7 +126,8 @@
                </div>
                <div class="div_chart">
                   <koia-summary-table *ngIf="isSummaryContext(context)" [gridView]="true" [context]="context"
-                     [entries$]="entries$" (onRemove)="removeElement($event)"></koia-summary-table>
+                     [entries$]="entries$" (onRemove)="removeElement($event)">
+                  </koia-summary-table>
                   <koia-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
                      [parentConstraintSize]="true" (onRemove)="removeElement($event)"
                      (onWarning)="notifyWarning($event)">
