--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -65,6 +65,11 @@ p {
    color: black;
 }
 
+.mat-corrupt {
+   background-color: red;
+   color: #fff;
+}
+
 #div_start {
    display: flex;
    justify-content: center;
