--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -66,7 +66,7 @@
 
         <mat-form-field class="column_filter_value" *ngIf="!columnFilter.operator.endsWith('empty')">
           <input matInput type="text" placeholder="Filter Value"
-            [matTooltip]="propertyFilterCustomizer.tooltipOf(columnFilter)" [value]="columnFilter.value"
+            [matTooltip]="propertyFilterCustomizer.tooltipOf(columnFilter)" [value]="propertyFilterCustomizer.formattedValueOf(columnFilter)"
             (input)="onColumnFilterValueChanged(columnFilter, $event.target.value)"
             (keyup)="onFilterFieldKeyUp($event)">
           <button mat-button color="primary" *ngIf="columnFilter.value" matSuffix mat-icon-button
