New info button on main toolbar lets you display details of active scene

--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -5,6 +5,9 @@
       <button id="butHome" mat-button mat-icon-button matTooltip="Front Page" [routerLink]="[urlFront]">
         <mat-icon>home</mat-icon>
       </button>
+      <button id="butShowSceneDetails" mat-button mat-icon-button matTooltip="Show Scene Details" (click)="showSceneDetails()">
+        <mat-icon>info_outlined</mat-icon>
+      </button>
       <button id="butScenes" mat-button mat-icon-button matTooltip="Scenes" [routerLink]="[urlScenes]">
         <mat-icon>collections</mat-icon>
       </button>
