layout and text improvements on landing page

--- a/src/intro/assets/css/styles.css
+++ b/src/intro/assets/css/styles.css
@@ -16,6 +16,7 @@ body {
 p {
   margin-bottom: 15px;
   line-height: 1.5;
+  text-align: justify;
 }
 a {
   color: #db2a0b;
@@ -149,7 +150,7 @@ select {
   -webkit-appearance: none;
 }
 #topcontrol {
-  background: #ff9d00;
+  background: #db2a0b;
   color: #fff;
   text-align: center;
   display: inline-block;
@@ -171,7 +172,7 @@ select {
   z-index: 30;
 }
 #topcontrol:hover {
-  background: #ff9d00;
+  background: #b82309;
 }
 #topcontrol .fa {
   position: relative;
@@ -570,7 +571,7 @@ select {
   font-size: 18px;
 }
 .why .item {
-  padding: 90px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #eee;
 }
 .why .item.last-item {
