--- a/src/app/scenes/scenes.component.css
+++ b/src/app/scenes/scenes.component.css
@@ -8,10 +8,11 @@
   display: flex;
 }
 
-#span_filter {
-  position: absolute;
-  top: 10px;
-  right: 15px;
+#div_filter {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 #filter_field {  
