--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -51,23 +51,25 @@
     <mat-card-title>All Scenes
     </mat-card-title>
     <mat-card-subtitle>Manage your existing scenes. Activate one to start creating graphics.
-      <span id="span_filter">
-        <mat-form-field id="filter_field">
-          <input matInput type="text" placeholder="Text Filter" [value]="filter"
-            (change)="onFilterChange($event.target.value)">
-          <button mat-button id="clearFilter" color="primary" *ngIf="filter" matSuffix mat-icon-button
-            aria-label="Clear" (click)="onFilterChange('')">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
-        <button id="but_delete_scenes" mat-stroked-button [disabled]="filteredSceneInfos.length === 0"
-          (click)="onDeleteScenesButtonPressed()">
-          <mat-icon>delete_forever</mat-icon>
-          <span>&nbsp;{{ filter ? 'Delete filtered' : 'Delete all' }}</span>
-        </button>
-      </span>
     </mat-card-subtitle>
   </mat-card-header>
+
+  <div id="div_filter">
+    <mat-form-field id="filter_field">
+      <input matInput type="text" placeholder="Text Filter" [value]="filter"
+        (change)="onFilterChange($event.target.value)">
+      <button mat-button id="clearFilter" color="primary" *ngIf="filter" matSuffix mat-icon-button aria-label="Clear"
+        (click)="onFilterChange('')">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <button id="but_delete_scenes" mat-stroked-button [disabled]="filteredSceneInfos.length === 0"
+      (click)="onDeleteScenesButtonPressed()">
+      <mat-icon>delete_forever</mat-icon>
+      <span>&nbsp;{{ filter ? 'Delete filtered' : 'Delete all' }}</span>
+    </button>
+  </div>
+
   <div class="div_scene" *ngFor="let sceneInfo of filteredSceneInfos">
 
     <button class="but_more" mat-icon-button [matMenuTriggerFor]="moreMenu">
